--- a/MyStream/pom.xml
+++ b/MyStream/pom.xml
@@ -8,6 +8,25 @@
         <artifactId>Tasks</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.20</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.4.1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
     <groupId>MyStream</groupId>
     <artifactId>MyStream</artifactId>
     <version>1.0-SNAPSHOT</version>
